--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "description": "Drag'n drop upload for Q.Wiki",
   "version": "1.0.0",
   "private": true,
+  "scripts": {
+    "postinstall": "grunt build"
+  },
   "devDependencies": {
-    "grunt": "~0.4.1",
-    "grunt-contrib-uglify": "~0.5.1",
-    "grunt-contrib-watch": "~0.6.1",
-    "grunt-sass": "=0.14.1",
-    "install": "~0.1.7",
-    "npm": "~1.4.21",
-    "time-grunt": "~0.4.0"
+    "grunt": "^0.4.5",
+    "grunt-contrib-uglify": "^0.10.0",
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-sass": "^1.1.0",
+    "time-grunt": "^1.2.2"
   }
 }
